--- a/index.html
+++ b/index.html
@@ -8,11 +8,20 @@
 </head>
 <body>
     <div class="products">
-        <div class="productone">
-            <img src="./assets/images/shoe1.jpg" alt="shoe1">
-            <h1>Sneaker</h1>
-            <h3>Price</h3>
-            <p>Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Placeat, porro?</p>
+        <div id="productone" class="productone">
+            <img src="" id="imgOne" alt="shoe1">
+            <h1 id="prodOneName"></h1>
+            <h3 id="prodOnePrice"></h3>
+            <p id="prodOneDesc"></p>
+        </div>
+        <div id="producttwo" class="producttwo">
+            <img src="" id="imgTwo" alt="shoe2">
+            <h1 id="prodTwoName"></h1>
+            <h3 id="prodTwoPrice"></h3>
+            <p id="prodTwoDesc"></p>
+        </div>
+        <div id="productfour">
+
         </div>
     </div>
     <script src="./assets/JS/index.js"></script>
