--- a/index.html
+++ b/index.html
@@ -20,7 +20,32 @@
             <h3 id="prodTwoPrice"></h3>
             <p id="prodTwoDesc"></p>
         </div>
+        <div id="productthree">
+            <img src="./assets/images/shoe3.jpg" id="imgThree" alt="shoe3">
+            <h1 id="prodThreeName"></h1>
+            <h3 id="prodThreePrice"></h3>
+            <p id="prodThreeDesc"></p>
+
+        </div>
         <div id="productfour">
+            <img src="./assets/images/Icecream.jpg" id="imgFour" alt="IceCream">
+            <h1 id="prodFourName"></h1>
+            <h3 id="prodFourPrice"></h3>
+            <p id="prodFourDesc"></p>
+
+        </div>
+        <div id="productfive">
+            <img src="./assets/images/burger.jpg" id="imgFive" alt="Burger">
+            <h1 id="prodFiveName"></h1>
+            <h3 id="prodFivePrice"></h3>
+            <p id="prodFiveDesc"></p>
+
+        </div>
+        <div id="productsix">
+            <img src="./assets/images/clothing.jpg" id="imgSix" alt="clothes">
+            <h1 id="prodSixName"></h1>
+            <h3 id="prodSixPrice"></h3>
+            <p id="prodSixDesc"></p>
 
         </div>
     </div>
